<resources>
    <string name="app_name">Silvassa Municipal Corporation</string>
    <string name="et_username_hint">User Name</string>
    <string name="et_password_hint">Password</string>
    <string name="login">Log In</string>
    <string name="zone">Zone</string>
    <string name="owner_name">Owner Name</string>
    <string name="occupier_name">Occupier Name</string>
    <string name="property_id">Property ID</string>
    <string name="sync">Sync</string>
    <string name="search">Search</string>
    <string name="proceed_to_pay">Proceed to Pay</string>
    <string name="payment_mode">Payment Mode</string>
    <string name="cash">Cash</string>
    <string name="cheque">Cheque</string>
    <string name="print">Print</string>
    <string name="alert_message">Please provide valid input</string>
    <string name="pay_now">Pay Now</string>
    <string name="amount">Amount</string>
    <string name="back">Back</string>
    <string name="error_network">No Internet Connectivity</string>
    <string name="error_server">Sorry, we r currently under maintenance!!</string>
    <string name="print_response">Payment Confirmation Email be sent to your registered Email id</string>
    <string name="error_payment">Failed to process payment!</string>
    <string name="sorry_no_results">Sorry no results match your search criteria!</string>
    <string name="pos">Pos</string>
    <string name="menu_logout">Logout</string>
    <string name="no_label">No</string>
    <string name="yes_label">Yes</string>
    <string name="logout_message">Do you want to Logout?</string>
    <string name="string_hint_search_property">Search propertyid</string>
    <string name="string_hint_search_occupier">Search Occupier</string>
    <string name="string_hint_search_owner">Search Owner</string>
    <string name="error_sync_failed_response">"This might be a temporary issue, please try again!."</string>
    <string name="error_network_connectivity">Please check your network connection.</string>
    <string name="string_hint_search_house_no">Search By House No.</string>
    <string name="select_propertyid">Select PropertyId</string>
    <string name="select_occupier">Select Occupier</string>
    <string name="select_owner">Select Owner</string>
    <string name="string_hint_search_owner_or_occupier">Search Owner/Occupier</string>
    <string name="string_hint_search_owner_or_occupier_or_houseno">Search Owner/Occupier/HouseNo.</string>


    <string-array name="spinner_array">
        <item name="Zone">Zone</item>
        <item name="OwnerName">@string/owner_name</item>
        <item name="OccupierName">@string/occupier_name</item>
        <item name="PropertyId">@string/property_id</item>
    </string-array>

    <string-array name="filterable_array">
        <item name="Zone">Zone</item>
        <item name="OwnerName">@string/owner_name</item>
        <item name="OccupierName">@string/occupier_name</item>
        <item name="PropertyId">@string/property_id</item>
        <item name="Zone">Zone</item>
        <item name="OwnerName">@string/owner_name</item>
        <item name="OccupierName">@string/occupier_name</item>
        <item name="PropertyId">@string/property_id</item>
        <item name="Zone">Zone</item>
        <item name="OwnerName">@string/owner_name</item>
        <item name="OccupierName">@string/occupier_name</item>
        <item name="PropertyId">@string/property_id</item>
        <item name="Zone">Zone</item>
        <item name="OwnerName">@string/owner_name</item>
        <item name="OccupierName">@string/occupier_name</item>
        <item name="PropertyId">@string/property_id</item>
        <item name="Zone">Zone</item>
        <item name="OwnerName">@string/owner_name</item>
        <item name="OccupierName">@string/occupier_name</item>
        <item name="PropertyId">@string/property_id</item>
    </string-array>
</resources>
