<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@android:drawable/alert_light_frame"
    android:orientation="vertical">

    <android.support.v7.widget.AppCompatTextView
        android:id="@+id/content_message"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:paddingBottom="@dimen/spacing_large"
        android:paddingLeft="@dimen/spacing_large"
        android:paddingRight="@dimen/spacing_large"
        android:paddingTop="@dimen/spacing_large"
        android:text="@string/logout_message"
        android:textColor="@color/Grey_700"
        android:textSize="@dimen/abc_text_size_medium_material"
        tools:ignore="PrivateResource" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/Grey_700" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/ok_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/positive_button"
            android:layout_toStartOf="@+id/positive_button"
            android:background="@drawable/button_material"
            android:gravity="center"
            android:minEms="3"
            android:padding="@dimen/spacing_large"
            android:text="@string/no_label"
            android:textColor="@color/Grey_700"
            android:textSize="@dimen/abc_text_size_medium_material"
            tools:ignore="PrivateResource" />

        <android.support.v7.widget.AppCompatButton
            android:id="@+id/positive_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/button_material"
            android:gravity="center"
            android:minEms="3"
            android:padding="@dimen/spacing_large"
            android:text="@string/yes_label"
            android:textColor="@color/Grey_700"
            android:textSize="@dimen/abc_text_size_medium_material"
            tools:ignore="PrivateResource" />
    </RelativeLayout>
</LinearLayout>