<?xml version="1.0" encoding="utf-8"?>
<layout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/base_color"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="com.mapmyindia.ceinfo.silvassa.ui.activity.SyncSearchActivity">

        <RelativeLayout
            android:id="@+id/relative_parent_synsearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="fill_horizontal">

            <LinearLayout
                android:id="@+id/linear_parent_0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/spacing_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_row0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:paddingBottom="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large" />

                <Spinner
                    android:id="@+id/spinner_row0"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="65"
                    android:background="@drawable/drawable_background_edittext" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_parent_1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_parent_0"
                android:layout_marginBottom="@dimen/spacing_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_row1"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:gravity="start|fill_horizontal"
                    android:paddingBottom="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:text="@string/owner_name" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="65"
                    android:background="@drawable/drawable_background_edittext"
                    android:gravity="center_vertical|fill_horizontal">

                    <TextView
                        android:id="@+id/spinner_row1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/row_clear1"
                        android:layout_toStartOf="@+id/row_clear1"
                        android:clickable="true"
                        android:gravity="start|fill_horizontal"
                        android:hint="@string/select_owner"
                        android:inputType="none"
                        android:lines="1"
                        android:onClick="onClick"
                        android:padding="@dimen/padding_large"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="@dimen/font_normal" />

                    <ImageView
                        android:id="@+id/row_clear1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/padding_medium"
                        android:src="@drawable/ic_clear" />
                </RelativeLayout>


            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_parent_2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_parent_1"
                android:layout_marginBottom="@dimen/spacing_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_row2"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:gravity="start|fill_horizontal"
                    android:paddingBottom="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:text="@string/occupier_name" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="65"
                    android:background="@drawable/drawable_background_edittext"
                    android:gravity="fill_horizontal|center_vertical">

                    <TextView
                        android:id="@+id/spinner_row2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_toLeftOf="@+id/row_clear2"
                        android:layout_toStartOf="@+id/row_clear2"
                        android:clickable="true"
                        android:gravity="start|fill_horizontal"
                        android:hint="@string/select_occupier"
                        android:inputType="none"
                        android:lines="1"
                        android:onClick="onClick"
                        android:padding="@dimen/padding_large"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="@dimen/font_normal" />

                    <ImageView
                        android:id="@+id/row_clear2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/padding_medium"
                        android:src="@drawable/ic_clear" />

                </RelativeLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/linear_parent_3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_parent_2"
                android:layout_marginBottom="@dimen/spacing_small"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/label_row3"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="35"
                    android:gravity="start|fill_horizontal"
                    android:paddingBottom="@dimen/padding_large"
                    android:paddingTop="@dimen/padding_large"
                    android:text="@string/property_id" />

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="65"
                    android:background="@drawable/drawable_background_edittext"
                    android:gravity="fill_horizontal|center_vertical">

                    <TextView
                        android:id="@+id/spinner_row3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_toLeftOf="@+id/row_clear3"
                        android:layout_toStartOf="@+id/row_clear3"
                        android:clickable="true"
                        android:gravity="start|fill_horizontal"
                        android:hint="@string/select_propertyid"
                        android:inputType="none"
                        android:lines="1"
                        android:onClick="onClick"
                        android:padding="@dimen/padding_large"
                        android:textColor="@android:color/black"
                        android:textColorHint="@android:color/darker_gray"
                        android:textSize="@dimen/font_normal" />

                    <ImageView
                        android:id="@+id/row_clear3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:padding="@dimen/padding_medium"
                        android:src="@drawable/ic_clear" />

                </RelativeLayout>

            </LinearLayout>
        </RelativeLayout>

        <LinearLayout
            android:id="@+id/container_sync_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="@dimen/padding_large"
            android:gravity="center"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/et_sync_button"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_marginEnd="@dimen/spacing_medium"
                android:layout_marginRight="@dimen/spacing_medium"
                android:background="@drawable/drawable_background_back_button"
                android:gravity="center"
                android:shadowColor="#8A8A8A"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/sync"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />

            <android.support.v7.widget.AppCompatButton
                android:id="@+id/et_search_button"
                android:layout_width="120dp"
                android:layout_height="36dp"
                android:layout_marginLeft="@dimen/spacing_medium"
                android:layout_marginStart="@dimen/spacing_medium"
                android:background="@drawable/drawable_background_login_button"
                android:gravity="center"
                android:shadowColor="#8A8A8A"
                android:shadowDx="0"
                android:shadowDy="0"
                android:shadowRadius="5"
                android:text="@string/search"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:indeterminate="false"
            android:theme="@style/CircularProgress"
            android:visibility="gone" />

    </RelativeLayout>
</layout>